
Changes in JMurmel-1.2 relative to JMurmel-1.1

 * mlib: added functions compose, map-into, curry, rcurry
 * mlib: inplace modification macros (incf, decf...) now process 0 or more args (was: 0 or 1)


Changes in JMurmel-1.1 relative to JMurmel-1.0

 * feature expressions #+, #-, and, or, not
 * reader macros #b #o #f for binary, oct and hex, #\ for characters
 * load, require, provide
 * default library "mlib"
 * documentation in markdown (murmel-langref.md, mlib.md)
 * numerous bugfixes