@@ -489,6 +489,12 @@ pi ; ==> 3.141592653589793
 ; load it twice.
 
 
+;;; = (declaim (optimize ...
+;
+; `declaim` currently only supports `optimize`, others will be ignored.
+; `optimize` only supports speed, others will be ignored.
+
+
 ;;; == Function application ===========
 
 ;;; = function call
